--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,1 @@
-<div class="divCenter">
-  <h1>{{ title }}</h1>
-  <label translate>changeLanguage</label>
-  <select #language (change)="onChange(language.value)">
-    <option *ngFor="let lang of translateService.getLangs()" [value]="lang">
-      {{ lang | translate }}
-    </option>
-  </select>
-</div>
-
-<table>
-  <tr>
-    <th translate>key</th>
-    <th translate>value</th>
-  </tr>
-  <tr>
-    <td>example1</td>
-    <td translate>example1</td>
-  </tr>
-  <tr>
-    <td>example2.title</td>
-    <td translate>example2.title</td>
-  </tr>
-  <tr>
-    <td>example2.subtitle</td>
-    <td translate>example2.subtitle</td>
-  </tr>
-</table>
+<app-dashboard></app-dashboard>
